# discord-utils

./: .gitignore  README.md  download.sh  extract.py  keys.json.example  pyproject.toml  summarize.py
bot/: config.py  main.py
bot/features/: summarizer.py  voice_clear.py
summarize_script/: README
